hphp/hack/test/typecheck/typed_locals/assign-errors.php.exp
File "assign-errors.php", line 7, characters 3-9:
Typing error (Typing[4110])
  File "assign-errors.php", line 5, characters 11-13:
  Expected `int`
  File "assign-errors.php", line 7, characters 8-9:
  But got `string`
